--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -21,6 +21,7 @@ ul{
         height: 100vh;
         .hero-overlay{
             @include hero-overlay;
+            overflow: hidden
         }
         .container{
             @include container;
@@ -240,7 +241,7 @@ ul{
                                 padding: 25px 25px;
                                 position: absolute;
                                 bottom: 0;
-                                right: -55px;
+                                right: 0px;
                                 transform: translate(0%,+100%);
                                 transition: all 300ms ease;
                                 .cart-details-top{
@@ -331,8 +332,8 @@ ul{
                                     align-items: center;
                                     justify-content: space-between;
                                     padding: 15px 0;
-                                    border-top: 1px dotted $borderEEE;
-                                    border-bottom: 1px dotted $borderEEE;
+                                    border-top: 1px solid $borderEEE;
+                                    border-bottom: 1px solid $borderEEE;
                                     :first-child{
                                         color: $btnBlack;
                                         font-weight: 600;
@@ -348,6 +349,20 @@ ul{
                                     display: flex;
                                     justify-content: space-between;
                                     align-items: center;
+                                    position: relative;
+                                    &::after{
+                                        content: '';
+                                        display: block;
+                                        position: absolute;
+                                        width: 18px;
+                                        height: 1px;
+                                        background-color: #ccc;
+                                        left: 47%;
+                                        top: 50%;
+                                        transform: translate(-50%,-50%);
+                                        transform: rotate(-45deg);
+                                        }
+                                    
                                     button{
                                         background-color: $btnBlack;
                                         color: $white;
